[tool.poetry]
name = "metabase_export_import"
version = "0.1.0"
description = "A python library allowing to import and export metabase database configuration from a metabase API"

authors = [
  "Tangui Morlier <tangui@tangui.eu.org>",
]

repository = "https://github.com/24eme/metabase_export_import"
readme = "README.md"

keywords = ["metabase", "metabase-api", "metabase-python"]

[tool.poetry.dependencies]
python = "^3.10"

requests = "^2.31.0"
typer = "^0.9.0"
rich = "^13.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"